--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -526,7 +526,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.9.3</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.9.4</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -1604,8 +1604,8 @@
       await calculateSpeakerRolloffs();
       await calculateSubBandwidth();
       await optimizeSubDelay();
-      await finalizeXO();
       useAudyFiltering ? await generateTargetCurves() : await generateREWFilters();
+      await finalizeXO(); // after EQ takes into account any gains from REW filters
       finalizeTrims();
       finalizeDistances();
       await drawResults();
@@ -2061,8 +2061,8 @@
     async function getDynamicBassFill(idx, start, end) {
       // flips the SW response to ignore peaks and get the general baseline up to target
       const avgSPL = await getAvgSPL(idx, start, end, "1%2F6");
-      const flippedIdx = await postNext("Arithmetic", [idx, idx], {function: "1 / |A|", targetLevel: avgSPL});
-      const dynamicBassFill = await getAvgSPL(flippedIdx, start, end, "1%2F6");
+      const flippedIdx = await postNext("Arithmetic", [idx, idx], {function: "1 / |A|", targetLevel: 2 * avgSPL});
+      const dynamicBassFill = -1 * await getExactTrim(flippedIdx, start, end, "1%2F6");
       await postDelete(flippedIdx);
       return dynamicBassFill;
     }
@@ -2445,6 +2445,7 @@
         console.info(`${commandId[i].padStart(3, ".")} - generating target curve...`);
         const isSub = commandId[i].startsWith("SW");
         const mlpIdx = cmdIdMLPIndices[commandId[i]];
+        const avgIdx = cmdIdAVGIndices[commandId[i]];
         // add in all user customizations & calculate any AL offset
         const customFilterIdx = await getUserCustomizations(mlpIdx, commandId[i]); // add any user desired customizations
         const TCOffset = await getALOffset(targetCurveIdx, isSub); // used to auto-level target curve so app doesn't
@@ -2458,7 +2459,7 @@
         await postDelete(customFilterIdx); // custom filter idx is now target curve with custom filters
         await postNext('Add SPL offset', customFilterIdx, { offset: -(TCOffset + ALOffset) });
         await fetch_mREW(customFilterIdx, 'PUT', { title: `${commandId[i]}-targetCurve` });
-        cmdIdFilterIndices[commandId[i]] = customFilterIdx - 1; // baseline target curve will be deleted and everything will shift by -1
+        // auto-level compensation for custom filters
         const trimOffset = Math.round(ALOffset * 2) / 2;
         let logUpdate = `${commandId[i].padStart(3, ".")} - target curve created`;
         if (trimOffset != 0) {
@@ -2467,6 +2468,12 @@
           logUpdate += ` | auto-level offset: ${customLevelOriginal}dB → ${customLevel[i]}dB (${trimOffset}dB)`;
         }
         console.infoUpdate(logUpdate);
+        // store for later; subtract 1 because target curve will be removed
+        cmdIdFilterIndices[commandId[i]] = customFilterIdx - 1;
+        // passthrough raw responses as the EQ-ed responses since Audyssey EQ can't be known ahead of time
+        // note: these lists are used for finalizing XO
+        cmdIdMLPIndicesEQ[commandId[i]] = mlpIdx;
+        cmdIdAVGIndicesEQ[commandId[i]] = avgIdx;
       }
       await postDelete(targetCurveIdx);
     }
@@ -2790,19 +2797,19 @@
       if (noSub) { return; }
       console.log("Finalizing crossover frequencies...");
       console.info(`Usable XO range: ${minXO}hz - ${maxXO}hz (based on subwoofer bandwidth)`);
-      const mlpSWIdx = cmdIdMLPIndices[commandId[nChannels]];
-      // use min <-> max XO plus an octave on either side to set evaluation range
-      const startFreq = minXO / 2;
-      const endFreq = maxXO * 2;
+      const mlpSWIdx = cmdIdMLPIndicesEQ[commandId[nChannels]];
       for (let i = 1; i <= nSpeakers; i++) {
         // check if single channel or speaker pair
         const singleChannel = isSingleChannel(commandId[i]);
         const cmdIds = (singleChannel ? commandId[i] : `${commandId[i]} & ${commandId[i + 1]}`).padStart(9, ".");
         const initialXO = customCrossover[i];
+        // use an octave on either side of initialXO to set evaluation range
+        const startFreq = initialXO / 2;
+        const endFreq = initialXO * 2;
         // prepare speaker pair if it's not a single channel
-        let mlpSPIdx = cmdIdMLPIndices[commandId[i]];
+        let mlpSPIdx = cmdIdMLPIndicesEQ[commandId[i]];
         if (!singleChannel) {
-          const mlpSPIdxR = cmdIdMLPIndices[commandId[i + 1]];
+          const mlpSPIdxR = cmdIdMLPIndicesEQ[commandId[i + 1]];
           mlpSPIdx = await postNext('Magn plus phase average', [mlpSPIdx, mlpSPIdxR]); // do not use VA. it unfairly benefits single channel speakers
         }
         let bestXO = initialXO, minAvgDip = Infinity; // initialize
@@ -2818,8 +2825,7 @@
           const checkXOAvgDip = await getAvgDip(mlpXOResultIdx, startFreq, endFreq);
           if (minAvgDip > checkXOAvgDip) {
             // progressively require higher improvements for higher XO
-            // e.g. 0.04dB improvement needed to go up from 40hz but 0.12dB improvement needed to go up from 120hz
-            minAvgDip = checkXOAvgDip - checkXO / 1000;
+            minAvgDip = checkXOAvgDip - checkXO / 320;
             bestXO = checkXO;
           }
           await postDelete(mlpXOResultIdx); // cleanup checkXO response
@@ -3182,9 +3188,9 @@
       const avgDip = -1 * getAvgdB(dipsArray); // report the average dip as a positive dB value
       return avgDip;
     }
-    async function getExactTrim(idx, start, end) {
+    async function getExactTrim(idx, start, end, smoothing="Psy") {
       // calculates SPL offset against target curve @75dB
-      const idxSPL = await getAvgSPL(idx, start, end);
+      const idxSPL = await getAvgSPL(idx, start, end, smoothing);
       const targetArray = response2array(targetResponse, start, end);
       const targetSPL = targetArray.reduce((acc, val) => acc + val, 0) / targetArray.length;
       const offset = targetSPL - idxSPL;
